feat(post): add getOnePost endpoint and service method

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,5 @@ email.exist= Email already exists!
 password.mismatch = Password & Confirm Password do not match!
 
 invalid.email.format = Invalid email format
+
+community.exist = Community already exists!
