feat(auth): add unique username validation and allow login via username

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-name.required = Name is required
+name.required = username is required
 
 email.required = Email is required
 password.not.null = Password is required
@@ -7,6 +7,7 @@ confirm.password.required = Confirm password must match the password.
 birth.date.required = Date of birth is required
 
 email.exist= Email already exists!
+username.exist = Username already exists!
 
 password.mismatch = Password & Confirm Password do not match!
 
